# aihero

./: .gitignore  README.md
app/: .gitignore  pyproject.toml  requirements.txt
course/: .gitignore  README.md  day1_example.md  day1_test_frontmatter.py  day2_chunking.py  day2_intelligent_chunking.py  day2_test_chunking.py  main.py  pyproject.toml
course/.ipynb_checkpoints/: ai-agent-crash-course-checkpoint.ipynb
project/: DATABASE_CONNECTION.md  README.md  TESTING.md  app.py  chart.html  data_agent.py  data_loader.py  day1_day2_integration.py  day1_ingest.py  day1_test_frontmatter.py  day4_agent.py  day4_comparison.py  day4_test_agent.py  day5_analyze_logs.py  day5_evaluation.py  day5_test_evaluation.py  day6_app.py  day6_deploy.md  day6_ingest.py  day6_logs.py  day6_main.py  day6_search_agent.py  day6_search_tools.py  main.py  pyproject.toml  query_tools.py  requirements.txt  schema_indexer.py  test.py  test_chat_input.py  test_data.csv  test_database.py
